# fft-sandbox

./: CMakeLists.txt
finufft-vs-ducc/: CMakeLists.txt  finufft-vs-ducc-perf.cpp  finufft-vs-ducc.cpp
